# public/api-docs/models/openapi.yaml
@@ -249,6 +249,33 @@ paths:
         '404':
           $ref: '#/components/responses/404_Resource_Not_Found_Response'
 
+  '/results/{resultId}':
+    get:
+      tags: ['💯 Results']
+      summary: Retrieves a Result resource based on a single ID.
+      description: 'Returns the result identified by `resultId`.'
+      operationId: api_results_get
+      parameters:
+        - $ref: '#/components/parameters/resultId'
+      security:
+        - MiWApiSecurity: [ ]
+      responses:
+        '200':
+          description: Result
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Result'
+          headers:
+            ETag:
+              $ref: '#/components/headers/ETag'
+        '401':
+          $ref: '#/components/responses/401_Unauthorized_Response'
+        '403':
+          $ref: '#/components/responses/403_Forbidden_Response'
+        '404':
+          $ref: '#/components/responses/404_Resource_Not_Found_Response'
+
 components:
   headers:
     ETag:
@@ -490,6 +517,12 @@ components:
       schema:
         type: string
         pattern: "[0-9a-f]*"
+    resultId:
+      name: resultId
+      in: path
+      description: 'ID of result'
+      required: true
+      schema: { "type": "integer", pattern: '^\d+$' }
 
   examples:
     response-400:
