# src/Controller/ApiResultsQueryController.php
@@ -89,4 +89,57 @@ class ApiResultsQueryController extends AbstractController implements ApiResults
             ]
         );
     }
+
+    /**
+     * @see ApiResultsQueryInterface::getAction()
+     *
+     * @Route(
+     *     path="/{resultId}.{_format}",
+     *     defaults={ "_format": null },
+     *     requirements={
+     *          "resultId": "\d+",
+     *          "_format": "json|xml"
+     *     },
+     *     methods={ Request::METHOD_GET },
+     *     name="get"
+     * )
+     *
+     * @throws JsonException
+     */
+    public function getAction(Request $request, int $resultId): Response
+    {
+        $format = Utils::getFormat($request);
+        if (!$this->isGranted('IS_AUTHENTICATED_FULLY')) {
+            return Utils::errorMessage( // 401
+                Response::HTTP_UNAUTHORIZED,
+                '`Unauthorized`: Invalid credentials.',
+                $format
+            );
+        }
+
+        /** @var Result $result */
+        $result = $this->entityManager
+            ->getRepository(Result::class)
+            ->find($resultId);
+
+        if (!$result instanceof Result) {
+            return Utils::errorMessage(Response::HTTP_NOT_FOUND, null, $format);    // 404
+        }
+
+        // Caching with ETag (password included)
+        $etag = md5(json_encode($result, JSON_THROW_ON_ERROR));
+        if (($etags = $request->getETags()) && (in_array($etag, $etags) || in_array('*', $etags))) {
+            return new Response(null, Response::HTTP_NOT_MODIFIED); // 304
+        }
+
+        return Utils::apiResponse(
+            Response::HTTP_OK,
+            $result,
+            $format,
+            [
+                self::HEADER_CACHE_CONTROL => 'private',
+                self::HEADER_ETAG => $etag,
+            ]
+        );
+    }
 }
