# src/Controller/ApiResultsQueryInterface.php
@@ -21,4 +21,13 @@ interface ApiResultsQueryInterface
      * _Notes_: Returns all results from the system that the user has access to.
      */
     public function cgetAction(Request $request): Response;
+
+    /**
+     * **GET** Action<br>
+     * Summary: Retrieves a Result resource based on a single ID.<br>
+     * _Notes_: Returns the result identified by &#x60;_resultId_&#x60;.
+     *
+     * @param int $resultId Result id
+     */
+    public function getAction(Request $request, int $resultId): Response;
 }
